Automatically calculate a default custom element tag name.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 /* Base class for defining custom elements. */
 class PolymerElement extends Polymer.Class({}) {
 
+  /*
+   * The default tag name for element converts Pascal-case class name FooElement
+   * into hyphenated lowercase name foo-element. To define a custom tag name for
+   * a class, override this is() getter to just return the name as a hard-coded
+   * string ("my-element" or whatever).
+   */
+  get is() {
+    let className = this.constructor.name;
+    let upperCaseWordsRegex = /([A-Z][^A-Z]+)/g;
+    let words = [];
+    let match = upperCaseWordsRegex.exec( className );
+    while ( match ) {
+      words.push( match[1].toLowerCase() );
+      match = upperCaseWordsRegex.exec( className );
+    }
+    return words.join( "-" );
+  }
+
   static register() {
     document.registerElement( this.prototype.is, this );
   }
@@ -19,11 +37,7 @@ class PolymerElement extends Polymer.Class({}) {
 };
 
 /* Define a custom element. */
-class Greet extends PolymerElement {
-
-  get is() {
-    return "greet-element";
-  }
+class GreetElement extends PolymerElement {
 
   created() {
     this.textContent = "Hello, " + this.textContent + "!";
@@ -31,7 +45,7 @@ class Greet extends PolymerElement {
 
 };
 
-Greet.register();
+GreetElement.register();
 </script>
 
 </head>
